# throwinfo

./: .clang-format  CMakeLists.txt  LICENSE  README.md
include/throwinfo/: throwinfo.h
scripts/: build-cmake.sh  build-manual.sh
slides-examples/: action_inside_throw.cpp
slides-examples/01_stack/: example-stack-addr.cpp  example-stack.cpp
slides-examples/03_exception_limitations/: exception_limitations.cpp  exception_limitations2.cpp  random_generation.cpp
slides-examples/05_source_location/: example_source_location.cpp
slides-examples/10_stacktrace/: example_stacktrace01.cpp  example_stacktrace_iterate.cpp  simple-stacktrace-iteration.cpp  simple-stacktrace-iteration_v2.cpp
slides-examples/20_call_context/: example_call_context02.cpp
slides-examples/35_throw_interception/: exception_capture.cpp  intercept_throw.cpp  minimal_throw_intercept.cpp
slides-examples/40_exception_handler/: intercept_throw_and_catch.cpp  libcatch.backup.cpp  libcatch.backup2.cpp  testprog.cpp  throwinfo.cpp
slides-examples/60_window_throw_interception/: Windows_capture_stacktrace_20250913a.cpp  example_windows_exception_handler.cpp  windows-compiler-flags.txt
src/: .CMakeLists.txt.swp  CMakeLists.txt
src/tests/: test1.cpp  test2.cpp  testprog.cpp
src/tests/tests/: test1a.cpp
src/throwinfo/: throwinfo.cpp
